--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,6 +36,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyAA_Lwbw9x8p-dnZgej-sQeuhJqIE43axQ"/>
+               android:value="##ENTER YOUR API KEY##"/>
     </application>
 </manifest>
